@@ -310,6 +310,9 @@
 		<a href="#about-createcontainer">create container (width, height)</a><br>
 		
 	
+		<a href="#about-creategrid">create grid (width, height, rows, columns)</a><br>
+		
+	
 		<a href="#about-createmenu">create menu</a><br>
 		
 	
@@ -586,6 +589,12 @@
 		<a href="#about-getglobalstring">get global string (ID, global)</a><br>
 		
 	
+		<a href="#about-getgridcolumns">get grid columns (handle)</a><br>
+		
+	
+		<a href="#about-getgridrows">get grid rows (handle)</a><br>
+		
+	
 		<a href="#about-getherolevel">get hero level (who)</a><br>
 		
 	
@@ -794,6 +803,9 @@
 		
 	
 		<a href="#about-greyscalepalette">greyscale palette (first, last)</a><br>
+		
+	
+		<a href="#about-gridisshown">grid is shown (handle)</a><br>
 		
 	
 		
@@ -1465,6 +1477,12 @@
 		<a href="#about-setfullheroswapmode">set full hero swap mode (state)</a><br>
 		
 	
+		<a href="#about-setgridcolumns">set grid columns (handle, columns)</a><br>
+		
+	
+		<a href="#about-setgridrows">set grid rows (handle, rows)</a><br>
+		
+	
 		<a href="#about-setharmtiledamage">set harm tile damage (amount)</a><br>
 		
 	
@@ -1741,6 +1759,9 @@
 		<a href="#about-showbackdrop">show backdrop (number)</a><br>
 		
 	
+		<a href="#about-showgrid">show grid (handle, shown)</a><br>
+		
+	
 		<a href="#about-showmap">show map</a><br>
 		
 	
@@ -1790,6 +1811,9 @@
 		
 	
 		<a href="#about-sliceiscontainer">slice is container (handle)</a><br>
+		
+	
+		<a href="#about-sliceisgrid">slice is grid (handle)</a><br>
 		
 	
 		<a href="#about-sliceisrect">slice is rect (handle)</a><br>
@@ -6370,6 +6394,94 @@ end
 			
 			<br>See also: <ul class="seealso"><li><a href="#about-getwrap" class="ref">get wrap</a></li></ul>
 		</tt></p>
+		<a name="about-creategrid"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">create grid (width, height, rows, columns)</font></b><br>
+			Creates a new grid slice, and returns an handle to it. Grid slices are special containers that automatically arrange their children into rows and columns. No manual child positioning is required. The first two arguments are the width and height of the whole grid. The next two arguments are the number of rows and columns that should appear in the grid. If rows or columns are left out, the grid with be a boring 1x1.<br>
+			
+			
+		</tt></p>
+		<a name="about-sliceisgrid"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">slice is grid (handle)</font></b><br>
+			Return true if the <span class="param">handle</span> is a grid slice, or false if it is any other type of slice.<br>
+			
+			
+		</tt></p>
+		<a name="about-setgridcolumns"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">set grid columns (handle, columns)</font></b><br>
+			Changes the number of columns in a grid slice. Child slices will be automatically repositioned.<br>
+			
+			<br>See also: <ul class="seealso">
+<li>
+<a href="#about-getgridcolumns" class="ref">get grid columns</a>, </li>
+<li>
+<a href="#about-setgridrows" class="ref">set grid rows</a>, </li>
+<li><a href="#about-getgridrows" class="ref">get grid rows</a></li>
+</ul>
+		</tt></p>
+		<a name="about-getgridcolumns"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">get grid columns (handle)</font></b><br>
+			Returns the number of columns in a grid slice.<br>
+			
+			<br>See also: <ul class="seealso">
+<li>
+<a href="#about-setgridcolumns" class="ref">set grid columns</a>, </li>
+<li>
+<a href="#about-setgridrows" class="ref">set grid rows</a>, </li>
+<li><a href="#about-getgridrows" class="ref">get grid rows</a></li>
+</ul>
+		</tt></p>
+		<a name="about-setgridrows"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">set grid rows (handle, rows)</font></b><br>
+			Changes the number of rows in a grid slice. Child slices will be automatically repositioned.<br>
+			
+			<br>See also: <ul class="seealso">
+<li>
+<a href="#about-setgridcolumns" class="ref">set grid columns</a>, </li>
+<li>
+<a href="#about-getgridcolumns" class="ref">get grid columns</a>, </li>
+<li><a href="#about-getgridrows" class="ref">get grid rows</a></li>
+</ul>
+		</tt></p>
+		<a name="about-getgridrows"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">get grid rows (handle)</font></b><br>
+			Returns the number of rows in a grid slice.<br>
+			
+			<br>See also: <ul class="seealso">
+<li>
+<a href="#about-setgridcolumns" class="ref">set grid columns</a>, </li>
+<li>
+<a href="#about-getgridcolumns" class="ref">get grid columns</a>, </li>
+<li><a href="#about-setgridrows" class="ref">set grid rows</a></li>
+</ul>
+		</tt></p>
+		<a name="about-showgrid"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">show grid (handle, shown)</font></b><br>
+			Grid slices are normally invisible, but they can optionally display gridlines. This command takes a grid slice <span class="param">handle</span> and a true or false value. This command has no effect on the visibility of the grid's children. Don't confuse this command with <a href="#about-setslicevisible" class="ref">set slice visible</a>.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-gridisshown" class="ref">grid is shown</a></li></ul>
+		</tt></p>
+		<a name="about-gridisshown"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">grid is shown (handle)</font></b><br>
+			This command takes a grid slice <span class="param">handle</span> and returns true if the grid is showing its optional grid lines. If the grid is in its normal invisible state, this command returns false. Don't confuse this command with <a href="#about-getslicevisible" class="ref">get slice visible</a>.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-gridisshown" class="ref">grid is shown</a></li></ul>
+		</tt></p>
 		<a name="about-slicecollidepoint"></a>
 		<p>
 		<tt>
@@ -9330,7 +9442,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 672 commands in this file, of which 54 are only references to other commands.</p>
+	<p>Stats: There are 680 commands in this file, of which 54 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
